# st_pages

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_st_page.py  my_notes.md  pyproject.toml  tox.ini
.github/workflows/: linting.yml  pypi_action.yml  testing.yml
.streamlit/: pages.toml  pages_sections.toml
example_app/: example_four.py  example_one.py  example_two.py  requirements.txt  streamlit_app.py  streamlit_app_sections.py
example_app/.streamlit/: pages.toml  pages_sections.toml
example_app_sections/: app.py
example_app_sections/.streamlit/: pages_sections.toml
pages/: page_1.py  page_2.py  page_3.py  page_4.py  page_5.py
src/st_pages/: __init__.py
src/streamlit_pages/: __init__.py
tests/: test_edits.py  test_frontend.py  test_frontend_sections.py  test_streamlit_pages.py
