[tool.poetry]
name = "streamlit-pages"
version = "0.1.0"
description = "An experimental version of Streamlit Multi-Page Apps"
authors = ["Zachary Blackwood <zachary@streamlit.io>"]
readme = "README.md"
packages = [{include = "streamlit_pages", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = ">=1.10.0"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
tox = "^3.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
