[tool.poetry]
name = "st-pages"
version = "1.0.1"
license = "MIT"
description = "An experimental version of Streamlit Multi-Page Apps"
authors = ["Zachary Blackwood <zachary@streamlit.io>"]
readme = "README.md"
packages = [{ include = "st_pages", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = ">=1.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
tox = "^3.27.1"
pytest-playwright = "^0.3.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".git", ".vscode", ".pytest_cache", ".mypy_cache", ".env"]
line-length = 88

[tool.ruff.lint]
ignore = ["B008", "ISC001", "E501", "W191"]
select = [
  "B",
  "E",
  "F",
  "W",
  "I",
  "N",
  "C4",
  "EXE",
  "ISC",
  "ICN",
  "PIE",
  "PT",
  "RET",
  "SIM",
  "ERA",
  "PLC",
  "RUF",
  "ARG",
]


[tool.mypy]
files = ["**/*.py"]
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true
python_version = "3.9"
